--- a/package.json
+++ b/package.json
@@ -11,15 +11,22 @@
   },
   "dependencies": {
     "@nuxt/ui": "4.2.1",
+    "@pinia/nuxt": "^0.11.3",
+    "form-data": "^4.0.5",
     "libphonenumber-js": "^1.12.31",
+    "mailgun.js": "^12.4.0",
     "mongoose": "^9.0.2",
     "nuxt": "^4.2.1",
     "nuxt-auth-utils": "0.5.26",
     "nuxt-lucide-icons": "2.0.0",
     "pdf-lib": "^1.17.1",
+    "pinia": "^3.0.4",
     "typescript": "^5.6.3",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3",
     "zod": "^4.1.13"
+  },
+  "devDependencies": {
+    "@types/node": "^25.0.3"
   }
 }
